--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    # Debug paths and check for necessary files
+    # Debug paths and check for necessary file
     - name: Debug paths and file existence
       run: |
         echo "Current working directory: $(pwd)"
@@ -53,3 +53,4 @@ jobs:
     # Run tests
     - name: Run tests
       run: pytest tests --disable-warnings
+
