--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -67,8 +67,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.shubhamaute1 }}
-        password: ${{ secrets.Shubh@123 }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     # Build Docker image
     - name: Build Docker image
@@ -79,4 +79,3 @@ jobs:
     - name: Push Docker image
       run: |
         docker push shubhamaute1/housepriceprediction:latest
-
